--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,5 @@ data/abstract_feature_matrix.dill filter=lfs diff=lfs merge=lfs -text
 data/abstract_feature_model.dill filter=lfs diff=lfs merge=lfs -text
 data/claims_feature_model.dill filter=lfs diff=lfs merge=lfs -text
 data/claims_feature_matrix.dill filter=lfs diff=lfs merge=lfs -text
+*,dill filter=lfs diff=lfs merge=lfs -text
+*.dill filter=lfs diff=lfs merge=lfs -text
